Pongo accordion con texto mas grand y simbolo +, agrego imagenes, avanzo un poco en el responsive del footer, avanzo en slider

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div id="inicio">
             <img class="image" src="oftamologiaia1.png">
             <h1 class="title has-text-centered py-3">CEVI</h1>
-            <h2 class="subtitle">
+            <h2 class="subtitle has-text-centered">
                 Centro Especializado De La Visión
             </h2>
             <p class="px-3 my-5">Grupo selecto de profesionales especialistas y subespecialistas
@@ -71,7 +71,7 @@
                 tienen más de 5.000 cirugías exitosas en las diferentes especialidades oftalmológicas
                 con los resultados esperados y planeados.
             </p>
-            <div class="iframe-div">
+            <div class="iframe-div my-5">
                 <figure class="image is-16by9">
                     <iframe class="has-ratio p-1" width="560" height="315"
                         src="https://www.youtube.com/embed/eOV15a0yLAc?si=gk0t_GEuCx4zqEbX" title="YouTube video player"
@@ -81,90 +81,82 @@
                 </figure>
             </div>
 
-            <div class="especialistas">
-                    <h2 class="subtitle">Nuestros especialistas</h2>
+            <div class="my-6">
+                <h2 class="subtitle">Nuestros especialistas</h2>
             </div>
 
             <!-- Swiper -->
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img class="image rounded" src="doctor1.jpg" />
+                        <figure class="image">
+                            <img class="is-rounded blue-border" src="doctor1.jpg" />
+                            <p>Dr. Mauricio Agudelo Cardona<br><span class="has-text-weight-bold">
+                                    Oftalmólogo - Corneólogo
+                                </span>
+                            </p>
+                        </figure>
                     </div>
-                    <div class="swiper-slide"> 
-                        <img class="image rounded" src="doctor2.jpg" />
+                    <div class="swiper-slide">
+                        <figure class="image">
+                            <img class="is-rounded blue-border" src="doctor2.jpg" />
+                        </figure>
+                        <p>Dra. Laura Vanessa Romero De León<br><span class="has-text-weight-bold">
+                                Oftalmóloga - Glaucomatóloga
+                            </span>
+                        </p>
                     </div>
-                    <div class="swiper-slide"> 
-                        <img class="image rounded" src="doctor3.jpg" />
+                    <div class="swiper-slide">
+                        <figure class="image">
+                            <img class="is-rounded blue-border" src="doctor3.jpg" />
+                        </figure>
+                        <p>Dr. Jairo Alberto Ropero Rosillo<br><span class="has-text-weight-bold">
+                                Oftalmólogo - Oftalmopediatra y Estrabólogo
+                            </span>
+                        </p>
                     </div>
-                    <div class="swiper-slide"> 
-                        <img class="image rounded" src="doctor4.jpg" />
+                    <div class="swiper-slide">
+                        <figure class="image">
+                            <img class="is-rounded blue-border" src="doctor4.jpg" />
+                            <p>Dr. Sergio José Rojas Rangel<br><span class="has-text-weight-bold">
+                                    Optómetra - Optómetra Pediátrico y Ortoptista
+                                </span>
+                            </p>
+                        </figure>
                     </div>
-                    <div class="swiper-slide"> 
-                        <img class="image rounded" src="doctor5.jpg" />
+                    <div class="swiper-slide">
+                        <figure class="image">
+                            <img class="is-rounded blue-border" src="doctor5.jpg" />
+                        </figure>
+                        <p>Dr. José Agustín Jaramillo Solá<br><span class="has-text-weight-bold">
+                                Oftalmólogo - Retinólogo
+                            </span>
+                        </p>
                     </div>
-                    <div class="swiper-slide"> 
-                        <img class="image rounded" src="doctor6.jpg" />
+                    <div class="swiper-slide">
+                        <figure class="image">
+                            <img class="is-rounded blue-border" src="doctor6.jpg" />
+                        </figure>
+                        <p>Dra. Liliana Marcela Galeano Salazar<br><span class="has-text-weight-bold">
+                                Oftalmóloga General
+                            </span>
+                        </p>
                     </div>
                 </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
             </div>
-
-            <!-- Agrega las imágenes con descripciones abajo -->
-            <!-- <div class="imagenes-inicio">
-                <div class="imagen-info">
-                    <img src="doctor4.jpg" alt="Descripción de la imagen 1">
-                    <p class="info" style="display: none;color: #fff;">Dr. Sergio José Rojas Rangel
-                        <p style=" color: #fff;">Optómetra - Optómetra Pediátrico y Ortóptista</p>
-                    </p>
-                </div>
-                <div class="imagen-info">
-                    <img src="doctor3.jpg" alt="Descripción de la imagen 1">
-                    <p class="info" style="display: none;color: #fff;">Dr. Jairo Alberto Ropero Rosillo
-                        <p style=" color: #fff;">Oftalmólogo - Oftalmopediatra y Estrabólogo </p>
-                    </p>
-                </div>
-                <div class="imagen-info">
-                    <img src="doctor2.jpg" alt="Descripción de la imagen 1">
-                    <p class="info" style="display: none;color: #fff;">Dra. Laura Vanessa Romero De León
-                        <p class="info" style="color: #fff;">Oftalmóloga - Glaucomatóloga </p>
-                    </p>
-
-                </div>
-                <div class="imagen-info">
-                    <img src="doctor1.jpg" alt="Descripción de la imagen 1">
-                    <p class="info" style="display: none;color: #fff;">Dr. Mauricio Agudelo Cardona
-                        <p style=" color: #fff;">Oftalmólogo - Corneólogo </p>
-                    </p>
-                </div>
-                <div class="imagen-info">
-                    <img src="doctor5.jpg" alt="Descripción de la imagen 1">
-                    <p class="info" style="display: none;color: #fff;">Dr. José Agustín Jaramillo Solá
-                        <p style=" color: #fff;">Oftalmólogo - Retinólogo </p>
-                    </p>
-                </div>
-                <div class="imagen-info">
-                    <img src="doctor6.jpg" alt="Descripción de la imagen 1">
-                    <p class="info" style="display: none;color: #fff;">Dra. Liliana Marcela Galeano Salazar
-                        <p style=" color: #fff;">Oftalmóloga General </p>
-                    </p>
-                </div>
-            </div> -->
-
         </div>
 
         <!-- SERVICES ========================================================================================= -->
         <div id="servicios">
-            <h2 class="subtitle">Nuestros Servicios</h2>
+            <img class="image" src="servicios.png" alt="">
+            <h2 class="subtitle my-6">Nuestros Servicios</h2>
             <p class="px-4 my-4">La visión es de las partes mas importantes y hermosas de la vida por ello te
                 acompañamos en el proceso
                 de cuidarte de manera preventiva o también ayudarte a tratar un problema existente con nuestro gran
                 equipo que esta dispuesto a atenderte y ayudarte de la mejor manera.</p>
         </div>
         <div class="my-5">
-            <button class="accordion">Consultas</button>
+            <button class="accordion is-size-5"><i class="fa fa-solid fa-plus mr-2"></i>Consultas</button>
             <div class="panel">
                 <p>• Consulta de Oftalmología General.</p>
                 <p>• Consulta de Oftalmología Especializada en Glaucoma.</p>
@@ -179,7 +171,7 @@
                 <p>• Óptica.</p>
             </div>
 
-            <button class="accordion">Unidades Especializadas</button>
+            <button class="accordion is-size-5"><i class="fa fa-solid fa-plus mr-2"></i>Unidades Especializadas</button>
             <div class="panel">
                 <p>• Unidad Completa Para el Control de Miopía (Optometría, Retinología, Oftalmopediatría, Biometría
                     IOL MASTER).</p>
@@ -192,7 +184,7 @@
 
             </div>
 
-            <button class="accordion">Cirugías</button>
+            <button class="accordion is-size-5"><i class="fa fa-solid fa-plus mr-2"></i>Cirugías</button>
             <div class="panel">
                 <p>• Cirugía de Pterigion.</p>
                 <p>• Cirugía de Chalazión.</p>
@@ -211,7 +203,7 @@
                 <p>• Inyecciones Intravitreas.</p>
             </div>
 
-            <button class="accordion">Procedimientos</button>
+            <button class="accordion is-size-5"><i class="fa fa-solid fa-plus mr-2"></i>Procedimientos</button>
             <div class="panel">
                 <p>• Iridotomía Laser.</p>
                 <p>• Iridoplástia Laser.</p>
@@ -223,6 +215,7 @@
 
         <!-- Optic ========================================================================================== -->
         <div id="optica">
+            <img class="image" src="optica.png" alt="">
             <h2 class="subtitle">Óptica</h2>
             <p class="px-5 my-5">Contamos con S.O.S ÓPTICA la cual es una reconocida óptica con más de 10 años
                 de experiencia en el mercado, cuentan con laboratorios para la fabricación de lentes
@@ -233,6 +226,7 @@
 
         </div>
         <div id="quienesSomos">
+            <img class="image" src="acerca.png" alt="">
             <h2 class="subtitle">Quiénes Somos</h2>
             <!-- <div class="textoabajo"> -->
             <p class="subtitle my-5">MISIÓN</p>
@@ -267,39 +261,38 @@
     </div>
 
     <!-- FOOTER =============================================================================================== -->
-    <footer class="hero has-background-black">
-        <div class="hero-body">
+    <footer class="hero has-background-black has-text-white">
+        <div class="hero-body columns">
 
             <div class="column is-flex is-align-content-center is-justify-content-center is-12-mobile is-4-tablet">
-                <img class="logo-footer" src="logo.png" alt="Logo">
+                <img class="image logo-footer" src="logo.png" alt="Logo">
             </div>
 
             <div
-                class="column is-flex is-flex-direction-column is-align-content-center is-justify-content-center is-12-mobile is-4-tablet">
-                <p class="title is-4 mb-4">City Médica</p>
+                class="column is-flex is-flex-direction-column is-align-content-center is-justify-content-start is-12-mobile is-4-tablet">
+                <p class="title is-4">City Médica</p>
+                <p><span class="has-text-weight-bold">Telefono:</span> +57 319 2136049</p>
+                <p><span class="has-text-weight-bold">WhatsApp:</span> +57 319 2136049</p>
+                <p><span class="has-text-weight-bold">Correo:</span> cevirionegro@gmail.com</p>
+                <p>Torre 2 Consultorio 303</p>
+                <p>Carrera 55 a No 35 - 227, Rionegro, Antioquia</p>
                 <span class="icon">
                     <a href="https://instagram.com/cevirionegro?igshid=MmU2YjMzNjRlOQ==" target="_blank">
                         <i class="fa fa-instagram has-text-white fa-lg"></i>
                     </a>
                 </span>
-                <p>Torre 2 Consultorio 303</p>
-                <p><span class="has-text-weight-bold">Telefono:</span> +57 319 2136049</p>
-                <p><span class="has-text-weight-bold">WhatsApp:</span> +57 319 2136049</p>
-                <p><span class="has-text-weight-bold">Correo:</span> cevirionegro@gmail.com</p>
-                <p>Carrera 55 a No 35 - 227, Rionegro, Antioquia</p>
             </div>
 
             <div
                 class="column is-flex is-flex-direction-column is-align-content-center is-justify-content-start is-12-mobile is-4-tablet">
-                <p class="title mb-2 is-5">Horario de Atención</p>
-                <p>Lunes a viernes: 9am-6pm</p>
-                <p>Sábados: 9am-4pm</p>
+                <p class="title is-4">Horario de Atención</p>
+                <p><span class="has-text-weight-bold">Lunes a viernes:</span> 9am-6pm</p>
+                <p><span class="has-text-weight-bold">Sábados:</span> 9am-4pm</p>
             </div>
         </div>
 
-        <p class="has-text-centered my-2">&copy; <span id="currentYear"></span> Clínica CEVI. Todos los derechos
+        <p class="has-text-centered my-4">&copy; <span id="currentYear"></span> Clínica CEVI. Todos los derechos
             reservados.</p>
-        </div>
     </footer>
 
     <!-- WAPP BTN -->
@@ -365,19 +358,12 @@
 
     var swiper = new Swiper(".mySwiper", {
         spaceBetween: 10,
+        slidesPerGroup: "2",
         slidesPerView: "2",
         autoplay: {
-            delay: 2500,
+            delay: 3500,
             disableOnInteraction: false,
-        },
-        pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-        },
-        navigation: {
-            nextEl: ".swiper-button-next",
-            prevEl: ".swiper-button-prev",
-        },
+        }
     });
 </script>
 
@@ -385,20 +371,8 @@
 
 
 <!-- sombra al texto blanco encima del azul y mas grande texto del footer -->
-<!-- slider doctores, avatar circular para cada uno -->
-<!-- swiper js autoplay 2500ms de a 2, no responsive -->
-<!-- servicios sigue con acordeon -->
 <!-- titulos de subvision no dentro de la imagen -->
 <!-- Hola! ¿En qué podemos ayudarle? Estás comunicado con CEVI (Centro Especializado de la Visión) y Óptica SOS -->
 <!-- imagenes de profesionales redondas y sin efecto del hover -->
 <!-- hover al btn de wapp contactanos, eliminar btn que ya está que no lleva a nada. -->
 <!-- imagenes profesionales con borde redondeado tambien ver si se puede de dos colores -->
-
-
-<!-- #25B8D9
-#178CA6
-#95BF56
-#83A64E
-#0D0D0D -->
-
-<!-- video tamano que ocupe el alto de la pantalla pero que no lo estire -->
