--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" href="ruta_del_logo.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clínica CEVI</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="icon" href="logo.png" type="image/png">
@@ -58,9 +57,9 @@
 
     <!-- HOME =============================================================================================== -->
     <div class="container">
-        <div id="inicio">
-            <img class="image" src="oftamologiaia1.png">
-            <h1 class="title has-text-centered py-3">CEVI</h1>
+        <div id="inicio is-flex is-justify-content-center is-align-content-center">
+            <div class="div-frame mx-auto oftamologia-img"></div>
+            <h1 class="title has-text-centered py-3 is-size-1">CEVI</h1>
             <h2 class="subtitle has-text-centered">
                 Centro Especializado De La Visión
             </h2>
@@ -74,20 +73,22 @@
             <div class="iframe-div my-5">
                 <figure class="image is-16by9">
                     <iframe class="has-ratio p-1" width="560" height="315"
-                        src="https://www.youtube.com/embed/eOV15a0yLAc?si=gk0t_GEuCx4zqEbX" title="YouTube video player"
+                        src="https://www.youtube.com/embed/L1UxW1X3ZKU?si=iytatdKyiMDK7DhK" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </figure>
             </div>
+        </div>
 
+        <div class="container">
             <div class="my-6">
-                <h2 class="subtitle">Nuestros especialistas</h2>
+                <h2 class="subtitle is-size-1 my-4 px-5">Nuestros especialistas</h2>
             </div>
 
             <!-- Swiper -->
-            <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
+            <div class="swiper mySwiper my-4">
+                <div class="swiper-wrapper is-size-6">
                     <div class="swiper-slide">
                         <figure class="image">
                             <img class="is-rounded blue-border" src="doctor1.jpg" />
@@ -145,16 +146,17 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- SERVICES ========================================================================================= -->
-        <div id="servicios">
-            <img class="image" src="servicios.png" alt="">
-            <h2 class="subtitle my-6">Nuestros Servicios</h2>
-            <p class="px-4 my-4">La visión es de las partes mas importantes y hermosas de la vida por ello te
-                acompañamos en el proceso
-                de cuidarte de manera preventiva o también ayudarte a tratar un problema existente con nuestro gran
-                equipo que esta dispuesto a atenderte y ayudarte de la mejor manera.</p>
-        </div>
+    <!-- SERVICES ========================================================================================= -->
+
+    <div class="container" id="servicios">
+        <div class="div-frame mx-auto servicios-img"></div>
+        <h2 class="subtitle my-6 is-size-1 my-4 px-5">Nuestros Servicios</h2>
+        <p class="px-4 my-4">La visión es de las partes mas importantes y hermosas de la vida por ello te
+            acompañamos en el proceso
+            de cuidarte de manera preventiva o también ayudarte a tratar un problema existente con nuestro gran
+            equipo que esta dispuesto a atenderte y ayudarte de la mejor manera.</p>
         <div class="my-5">
             <button class="accordion is-size-5"><i class="fa fa-solid fa-plus mr-2"></i>Consultas</button>
             <div class="panel">
@@ -210,53 +212,56 @@
                 <p>• Capsulotomía Laser.</p>
             </div>
         </div>
+    </div>
 
 
 
-        <!-- Optic ========================================================================================== -->
-        <div id="optica">
-            <img class="image" src="optica.png" alt="">
-            <h2 class="subtitle">Óptica</h2>
-            <p class="px-5 my-5">Contamos con S.O.S ÓPTICA la cual es una reconocida óptica con más de 10 años
-                de experiencia en el mercado, cuentan con laboratorios para la fabricación de lentes
-                oftálmicos de gran trayectoria y la mejor calidad tales como ZEISS, MEGALENS, PRECIZONLAB,
-                SERVIOPTICA, VISIONLAB y grandes proveedores en monturas para cubrir todas las necesidades
-                de sus usuarios; atendido por su representante legal y propietaria Alejandra Catalina
-                Sepúlveda Rivillas.</p>
+    <!-- Optic ========================================================================================== -->
+    <div class="container" id="optica">
+        <div class="div-frame optica-img"></div>
+        <h2 class="subtitle is-size-1 my-4 px-5">Óptica</h2>
+        <p class="px-5 my-5">Contamos con S.O.S ÓPTICA la cual es una reconocida óptica con más de 10 años
+            de experiencia en el mercado, cuentan con laboratorios para la fabricación de lentes
+            oftálmicos de gran trayectoria y la mejor calidad tales como ZEISS, MEGALENS, PRECIZONLAB,
+            SERVIOPTICA, VISIONLAB y grandes proveedores en monturas para cubrir todas las necesidades
+            de sus usuarios; atendido por su representante legal y propietaria Alejandra Catalina
+            Sepúlveda Rivillas.</p>
 
+    </div>
+
+    <!-- Quienes somos =========================================================================== -->
+    <div class="container" id="quienesSomos">
+        <div class="div-frame mx-auto acerca-img"></div>
+        <h2 class="subtitle is-size-1 my-4 px-5">Quiénes Somos</h2>
+        <!-- <div class="textoabajo"> -->
+        <p class="subtitle my-5 px-5">MISIÓN</p>
+        <p class="my-4 mx-5">Contribuir al cuidado de la salud visual a través de la prestación de servicio de alta
+            calidad centrado
+            en la atención, ética y profesionalismo con un equipo humano altamente capacitado para dar solución y
+            manejo a cualquier problema de salud visual que se presente.
+        </p>
+        <p class="subtitle my-5 px-5">VISIÓN
+        </p>
+        <p class="my-4 mx-5">Para el año 2025, ser una de las instituciones especializadas en salud visual más
+            reconocidas y queridas
+            del Oriente Antioqueño, consolidándose como un centro especializado con altos estándares de calidad en
+            la atención y manejo de las alteraciones de la visión a nuestros usuarios.
+        </p>
+        <!-- </div> -->
+    </div>
+    <div class="container" id="contacto">
+        <div class="iframe-div my-4">
+            <figure class="image is-16by9">
+                <iframe class="has-ratio p-1"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1983.464742250226!2d-75.3790676!3d6.1401752!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e469f5e5c0ffbb5%3A0xea2ae4935ce65968!2sCEVI!5e0!3m2!1ses-419!2sco!4v1707971025536!5m2!1ses-419!2sco"
+                    width="560" height="315" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </figure>
         </div>
-        <div id="quienesSomos">
-            <img class="image" src="acerca.png" alt="">
-            <h2 class="subtitle">Quiénes Somos</h2>
-            <!-- <div class="textoabajo"> -->
-            <p class="subtitle my-5">MISIÓN</p>
-            <p class="my-4 mx-5">Contribuir al cuidado de la salud visual a través de la prestación de servicio de alta
-                calidad centrado
-                en la atención, ética y profesionalismo con un equipo humano altamente capacitado para dar solución y
-                manejo a cualquier problema de salud visual que se presente.
-            </p>
-            <p class="subtitle my-5">VISIÓN
-            </p>
-            <p class="my-4 mx-5">Para el año 2025, ser una de las instituciones especializadas en salud visual más
-                reconocidas y queridas
-                del Oriente Antioqueño, consolidándose como un centro especializado con altos estándares de calidad en
-                la atención y manejo de las alteraciones de la visión a nuestros usuarios.
-            </p>
-            <!-- </div> -->
-        </div>
-        <div id="contacto">
-            <div class="iframe-div my-4">
-                <figure class="image is-16by9">
-                    <iframe class="has-ratio p-1"
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1983.464742250226!2d-75.3790676!3d6.1401752!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e469f5e5c0ffbb5%3A0xea2ae4935ce65968!2sCEVI!5e0!3m2!1ses-419!2sco!4v1707971025536!5m2!1ses-419!2sco"
-                        width="560" height="315" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </figure>
-            </div>
-        </div>
-        <div id="texto-doctor" style="display: none;">
-            <p>¿Listo para cuidar tu vista? Contáctanos para programar una cita.</p>
-        </div>
+    </div>
+    <div id="texto-doctor" style="display: none;">
+        <p>¿Listo para cuidar tu vista? Contáctanos para programar una cita.</p>
+    </div>
     </div>
     </div>
 
@@ -296,9 +301,11 @@
     </footer>
 
     <!-- WAPP BTN -->
-    <a href="https://api.whatsapp.com/send?phone=573002817744&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20M%C3%BAsicos%20de%20Fondo"
+    <a href="https://api.whatsapp.com/send?phone=573002817744&amp;text=Hola%21%20%C2%BFEst%C3%A1s%20comunicado%20con%20CEVI%20%28Centro%20Especializado%20de%20la%20Visi%C3%B3n%29%20y%20%C3%93ptica%20SOS"
         class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
+    </a>
+    <i class="fa fa-whatsapp my-float"></i>
     </a>
 
 </body>
@@ -357,7 +364,7 @@
     }
 
     var swiper = new Swiper(".mySwiper", {
-        spaceBetween: 10,
+        spaceBetween: 20,
         slidesPerGroup: "2",
         slidesPerView: "2",
         autoplay: {
@@ -371,8 +378,4 @@
 
 
 <!-- sombra al texto blanco encima del azul y mas grande texto del footer -->
-<!-- titulos de subvision no dentro de la imagen -->
-<!-- Hola! ¿En qué podemos ayudarle? Estás comunicado con CEVI (Centro Especializado de la Visión) y Óptica SOS -->
-<!-- imagenes de profesionales redondas y sin efecto del hover -->
 <!-- hover al btn de wapp contactanos, eliminar btn que ya está que no lleva a nada. -->
-<!-- imagenes profesionales con borde redondeado tambien ver si se puede de dos colores -->
