Compressed images and made ig btn bigger

--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                 <p><span class="has-text-weight-bold">Correo:</span> cevirionegro@gmail.com</p>
                 <p>Torre 2 Consultorio 303</p>
                 <p>Carrera 55 a No 35 - 227, Rionegro, Antioquia</p>
-                <span class="icon">
+                <span class="icon pt-5">
                     <a href="https://instagram.com/cevirionegro?igshid=MmU2YjMzNjRlOQ==" target="_blank">
-                        <i class="fa fa-instagram has-text-white fa-lg"></i>
+                        <i class="fa fa-instagram has-text-white fa-3x"></i>
                     </a>
                 </span>
             </div>
